# Homeworks

./: README.md
homework1/: CMakeLists.txt  README.md  package.xml
homework1/src/: homework1.cpp
homework2/: CMakeLists.txt  README.md  package.xml
homework2/src/: homework2.cpp
homework3/: CMakeLists.txt  README.md  package.xml
homework3/src/: homework3.cpp
homework4/: CMakeLists.txt  README.md  package.xml
homework4/action/: Homework4.action
homework4/src/: homework4_client.cpp  homework4_server.cpp
homework5/: CMakeLists.txt  README.md  package.xml
homework5/src/: homework5.cpp
