<?xml version="1.0"?>
<package format="2">
  <name>homework1</name>
  <version>0.1.0</version>
  <description>Homework 1 package</description>

  <maintainer email="srcrbt@gmail.com">Roberto Sorce</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="srcrbt@gmail.com">Roberto Sorce</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
